--- a/lib/jeopardixir_web/templates/layout/app.html.eex
+++ b/lib/jeopardixir_web/templates/layout/app.html.eex
@@ -22,6 +22,7 @@
         <a href="https://phoenixframework.org/" class="phx-logo">
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
+        <%= link "Sign up", to: Routes.user_path(@conn, :new) %>
       </section>
     </header>
     <main role="main" class="container">
