Show only the answer from the user

--- a/lib/jeopardixir_web/templates/category/show.html.eex
+++ b/lib/jeopardixir_web/templates/category/show.html.eex
@@ -27,7 +27,7 @@
     </tr>
   </thead>
   <tbody>
-<%= for answer <- @category.answers do %>
+<%= for answer <- @answers do %>
     <tr>
       <td><%= answer.body %></td>
       <td><%= answer.user_id %></td>
